[package]
name = "flashbots-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
ethers-signers = "0.6.2"
sha3 = "0.10.1"
hex = "0.4.3"

[dev-dependencies]
ethers-core = "0.6.3"
